--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^6.5.1",
     "electron": "^23.1.0",
-    "electron-builder": "^23.6.0",
+    "electron-builder": "^24.0.0-alpha.5",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.27.1",
     "style-loader": "^3.3.1",
